--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,3 @@
-body {
-  background: repeating-linear-gradient(-45deg, white, white 2px, ThreeDHighlight 1px, ThreeDHighlight 3px);
-  min-height: 100%;
-}
-
 .margin {
   background-color: white;
   border-style: outset;
@@ -80,4 +75,10 @@ body {
     .featurette-heading {
       margin-top: 7rem;
     }
+  }
+
+  body {
+    background: repeating-linear-gradient(-45deg, white, white 2px, ThreeDHighlight 1px, ThreeDHighlight 3px);
+    min-height: 100%;
+    background-color: aqua !important;
   }
